--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -36,14 +36,14 @@
                 </div>
             </div>
             <p>
-                Greensource Energy Consult is a registered and certified solar energy system design, installation, operation and maintenance
-                company. Built up in 2018, we have developed a solid client centered methodology to achieve growth and sustainability.
-                'Greensource Energy Consult' has pratical experience in custom solar power arrangements. At Greensource Energy
-                Consult, we welcome you to love solar home systems too. We are committed to helping you appreciate the change
-                to solar and to live in solace and without dread of your electric and utility bills. Greensource Energy Consult
-                enables you to use clean vitality and appreciate free power from the sun harnessing it to power your homes
-                and businesses, while contributing to reduce global pollution and carbon footprints. It is our duty to give
-                extraordinary consumer loyalty and administration in each part of your solar energy investment.
+                Greensource Energy Consult is an end to end, customer oriented renewable energy business outfit providing sustainable solar
+                home solutions. Our goal is to provide tailored solutions and lifelong support empowering homes, communities, farms,
+                institutions and businesses to control the way they harness clean energy, with the quest of helping to create a world
+                where clean energy is powered by individuals, innovation and independence. Started in 2020 on the premise that anyone
+                can be self-sufficient wherever they choose to live. Whether you live off the utility grid, are connected to your local
+                utility, or somewhere in between, We will guide you through the entire design process and beyond, with guaranteed lifetime
+                support. We're here to make sure your system is compatible, code-compliant, and appropriately sized to give you optimum
+                satisfaction.
             </p>
             <h3>Why Choose Greensource Solar</h3>
             <ul>
@@ -114,7 +114,7 @@
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
             <span>3</span>
-                <h4>Solar Design</h4>
+                <h4>System Design</h4>
                 <p>After analysis, we determine all solar components that will be suitable for the design</p>
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
@@ -182,7 +182,7 @@
                    </g>
                    </svg>                   
                 <h5>Energy saving</h5>
-                <p>On installation you get to save money through controlled energy monitoring and consumption.</p>
+                <p>Who doesn't enjoy having one less expense deducted from their paycheck? You can significantly lower or perhaps totally eliminate your electric bill with the right system size.</p>
             </div>
             <div class="radial col-lg-4 col-sm-6 col-xs-12">
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="60.000000pt" height="60.000000pt" viewBox="0 0 256.000000 256.000000"
@@ -233,7 +233,7 @@
                     </g>
                 </svg>
                 <h5>Unique designs</h5>
-                <p>Our unique set of custom designs are tailored to meet your energy needs irrespective of energy consumption.</p>
+                <p>We carefully consider your requirements before making recommendations for top components and best system configuration you need.</p>
             </div>
             <div class="radial col-lg-4 col-sm-6 col-xs-12">
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="60.000000pt" height="60.000000pt" viewBox="0 0 256.000000 256.000000"
@@ -372,7 +372,7 @@
                     </g>
                 </svg>
                 <h5>Sustainable/Durable</h5>
-                <p>Low maintenance, reliability and sustainability are the hallmark of solar energy system installations.
+                <p>There aren't a lot of moving parts in solar systems. As a result, they don't frequently need maintenance to keep them operating at their best.
                 </p>
             </div>
             <div class="radial col-lg-4 col-sm-6 col-xs-12">
@@ -451,7 +451,7 @@
                     </g>
                 </svg>
                 <h5>Clean energy</h5>
-                <p>Solar energy technologies produces clean energy with zero carbon emission improving living standard.</p>
+                <p>Solar is clean because its energy source, sunshine, doesn't include any carbon. Solar energy can be used without worrying about harming the environment.</p>
             </div>
         </div>
     </div>
