--- a/greensource_pages/templates/greensource_pages/energy-management.html
+++ b/greensource_pages/templates/greensource_pages/energy-management.html
@@ -24,15 +24,21 @@
 <div class="container padding">
     <div class="service-list row padding">
         <div class="col">
-            <img src="{% static 'images/energy-storage.jpg' %}" />
+            <img src="{% static 'images/energy-storage.webp' %}" />
             <p>
-                 Load demand which can make up as much as 70 percent of your electricity bill, can be significantly reduced with the help
-                of solar energy storage. We design two types of Energy storage;<br/>
-                <span>1. Complete Load Backup:-</span> We develop a system that can support any power consumptionyou require even if the grid goes down by accounting for all your solar energy usuage. This implies that until you peep through your window at your dark neighbourhood, yu won't even be aware that power is out.<br/>
-                <span>2. Critical Load Backup:-</span> With a Critical load battery system, you may choos which necessities you want to continue using in the event of a power outage. that implies that you can keep your lights on during a power outage while saving some money.<br/>
-                Grensource Energy provides cutting-edge energy storage systems that are easy to maintain, environmental
-                friendly and relatively cost effective. Our goal is to assist you in making wise investment in energy storage, wheather it
-                is for Residential or Commercial purpose, hence will increase the value of your facility and take you towards energy independence.
+                Load demand which can make up as much as 70 percent of your electricity bill, can be significantly reduced with the help
+                of solar energy storage. We design two types of Energy storage;
+                <br/>
+                <span>1. Complete Load Backup:-</span> We develop a system that can support any power consumptionyou require even if the grid
+                goes down by accounting for all your solar energy usuage. This implies that until you peep through your window at your
+                dark neighbourhood, yu won't even be aware that power is out.
+                <br/>
+                <span>2. Critical Load Backup:-</span> With a Critical load battery system, you may choos which necessities you want to continue
+                using in the event of a power outage. that implies that you can keep your lights on during a power outage while saving
+                some money.
+                <br/> Grensource Energy provides cutting-edge energy storage systems that are easy to maintain, environmental friendly and
+                relatively cost effective. Our goal is to assist you in making wise investment in energy storage, wheather it is for
+                Residential or Commercial purpose, hence will increase the value of your facility and take you towards energy independence.
             </p>
             <h4>Our Energy Storage Solutions includes:</h4>
             <ul>
