--- a/greensource_pages/templates/greensource_pages/gallery.html
+++ b/greensource_pages/templates/greensource_pages/gallery.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Greensource Solar Gallery</h1>
+            <h1>Greensource Gallery</h1>
         </div>
     </div>
 </div>
