--- a/greensource_pages/templates/greensource_pages/hvac.html
+++ b/greensource_pages/templates/greensource_pages/hvac.html
@@ -24,7 +24,7 @@
 <div class="container padding">
     <div class="service-list row padding">
         <div class="col">
-            <img src="{% static 'images/ceiling-lamp.webp' %}" alt="inverter" />
+            <img src="{% static 'images/electrical.webp' %}" alt="inverter" />
             <p>
                 You need people you can rely on when it comes to electrical installations. We have extensive experience at Greensource Energy
                 and are ready to work with you on your next project to offer a reliable, professional electrical installation.
