--- a/greensource_pages/templates/greensource_pages/pricing.html
+++ b/greensource_pages/templates/greensource_pages/pricing.html
@@ -227,11 +227,11 @@
     </section>
     <section class="video-block-style-one text-center">
         <div class="container">
-            <a href="#" class="video-popup" aria-label="play icon button">
+            <a href="https://youtube.com/shorts/DwkZ1JrpcxM" class="video-popup" aria-label="play icon button">
                 <i class="fa fa-play"></i>
             </a>
-            <p>We are Building the Future
-                <br> and Restoring the Past</p>
+            <p>Our Solar Systems are Self-Reliance 
+                <br> Independent and Sustainable</p>
         </div>
     </section>
     <section>
