--- a/greensource_pages/templates/greensource_pages/project-management.html
+++ b/greensource_pages/templates/greensource_pages/project-management.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Project Development</h1>
+            <h1>Project Management</h1>
         </div>
     </div>
 </div>
@@ -18,7 +18,7 @@
         <li class="breadcrumb-item">
             <a href="{% url 'services' %}">Services</a>
         </li>
-        <li class="breadcrumb-item active">Project Development</li>
+        <li class="breadcrumb-item active">Project Management</li>
     </ol>
 </nav>
 <div class="container padding"> 
