--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Solar Services We Render</h1>
+            <h1>Our Solar Services</h1>
         </div>
     </div>
 </div>
@@ -54,7 +54,7 @@
                             <div class="block">
                                     <i class="fas fa-car-battery"></i>
                             </div>
-                            <h3><a href="{% url 'energy_management' %}">PV Storage</a></h3>
+                            <h3><a href="{% url 'energy_management' %}">Energy Storage</a></h3>
                             <p>We build energy storage for solar energy systems, which is important for ensuring ...</p>
                             <a href="{% url 'energy_management' %}" class="read-more">Read More</a>
                         </div>
@@ -66,8 +66,8 @@
                                 <div class="block">
                                         <i class="fas fa-tasks"></i>
                                 </div>
-                                <h3><a href="{% url 'project_management' %}">PV Development</a></h3>
-                                <p>Your home/business energy usage and GHG emissions can be minimized with the ...</p>
+                                <h3><a href="{% url 'project_management' %}">Project Management</a></h3>
+                                <p>Greensource Energy offer Project development, operations and management ...</p>
                                 <a href="{% url 'project_management' %}" class="read-more">Read More</a>
                             </div>
                         </div>
@@ -78,7 +78,7 @@
                                 <div class="block">
                                         <i class="fas fa-bolt"></i>
                                 </div>
-                                <h3><a href="{% url 'hvac' %}">Electrical installation</a></h3>
+                                <h3><a href="{% url 'hvac' %}">Electrical projects</a></h3>
                                 <p>You need people you can rely on when it comes to electrical installations. We have ...</p>
                                 <a href="{% url 'hvac' %}" class="read-more">Read More</a>
                             </div>
