--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -99,7 +99,7 @@
                                     <a href="{% url 'index' %}">Home</a>
                                 </li>
                                 <li class="{% block nav-about %}{% endblock %} has-children">
-                                    <a href="#">About</a>
+                                    <a href="#">About Us</a>
                                     <ul class="dropdown arrow-top">
                                         <li>
                                             <a href="{% url 'about' %}">Company Profile</a>
@@ -136,7 +136,7 @@
 {% endblock %}    
 <footer class="footer-20192">
     <div class="site-section">
-        <div class="container">
+        <div class="container-fluid padding">
             <div class="cta d-block d-md-flex align-items-center px-5">
                 <div>
                     <h2 class="mb-0">Need a capable hand for your solar solution?</h2>
@@ -203,11 +203,11 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm">
                     <h3>Connect us</h3>
                     <ul class="list-unstyled links">
                         <li>
-                            <p>1, Heritage street by anobi Noah, arogun Mowe-Ofada Ogun.</p>
+                            <p>Anobi Noah, arogun Mowe-Ofada Ogun.</p>
                         </li>
                         <li>
                             <span>
@@ -220,7 +220,7 @@
                             <p><span>0913 2909 546 |&nbsp;0807 6068 609</span></p>
                         </li>
                     </ul>
-                    <h3>Follow us</h3>
+                    <h3>Stay Connected</h3>
                     <ul class="list-unstyled social">
                         <li>
                             <a href="https://www.twitter.com/greenn_energy" aria-label="twitter icon link">
