--- a/contact_us/templates/contact_us/contact.html
+++ b/contact_us/templates/contact_us/contact.html
@@ -22,7 +22,7 @@
             <div class="add col-lg-4 col-md-6 col-xs-12">
             <i class="fas fa-map-marker-alt"></i>
             <h6>Location</h6>
-            <p>1, Heritage street by anobi noah mowe-ofada Ogun state.</p>
+            <p>Anobi Noah Mowe-ofada Ogun state.</p>
         </div>
         <div class="add col-lg-4 col-md-6 col-xs-12">
                 <i class="far fa-envelope"></i>
