--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -13,8 +13,8 @@
             <div class="carousel-item active">
                 <amp-img src="{% static 'images/homepage1.webp' %}" alt="off-grid solar panels" wdith="" height="100vh"></amp-img>
                 <div class="carousel-caption">
-                    <h1 class="animated zoomIn">Let the
-                        <span>sun</span> work for you</h1>
+                    <h1 class="animated zoomIn">Harness the 
+                        <span>sun</span> to work for you</h1>
                     <p class="animated fadeInUp">Want to reduce your utility bills for home and business? We will Design and Install a Solar Sytem that
                         achieve this!</p>
                     <div class="button animated fadeInDown">
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/homepage2.webp' %}" alt="array of ground mounted solar panels">
+                <img src="{% static 'images/homepage2.webp' %}" alt="array of ground mounted solar panels"/>
                 <div class="carousel-caption">
                     <h2 class="animated zoomIn">Cost effective
                         <span>Solar </span>Solution</h2>
@@ -321,36 +321,36 @@
         <div class="home-page padding">
             <p>
                 Whether you are a home owner, business owner or organization, nonprofits, school districts, towns, agency, institution, electricity
-                costs can make up a large portion of your monthly expenses. Adopting solar energy will reduce your utility
-                bills, saving you a lot of money from rising electricity tariff and fuel cost. We will work closely with
-                you to reduce your energy costs, meet your business goals, and optimize your solar investment over time harnessing
-                the power of the sun.
+                costs can make up a large portion of your monthly expenses and your situation is unique to you. Adopting solar energy
+                will reduce your utility bills, saving you a lot of money from rising electricity tariff and fuel cost. You shouldn't
+                have to give up innovation and ingenuity to get a renewable energy solution that gives you a new sense of empowerment,
+                independence, and self-reliance.
             </p>
         </div>
     </div>
 </section>
-<section>
+<section>     
     <div class="container-fluid padding">
         <div class="row works padding">
             <div class="client-portfolio col-lg-3 col-md-6 col-xs-12">
                 <div class="diamond-image">
                     <div class="pic">
-                        <amp-img src="{% static 'images/blue-gray.webp' %}" alt="residential building" width="250px"
+                        <amp-img src="{% static 'images/residential.webp' %}" alt="residential building" width="250px"
                         height="210px"></amp-img>
                     </div>
                 </div>
-                <h3>Residential Solar</h3>
+                <h3>Residential</h3>
                 <hr />
                 <p>we believe a home should be a place of comfort designed to suit different needs.</p>
             </div>
             <div class="client-portfolio col-lg-3 col-md-6 col-xs-12">
                 <div class="diamond-image">
                     <div class="pic">
-                        <amp-img src="{% static 'images/bookcase.webp' %}" alt="commercial building" width="250px"
+                        <amp-img src="{% static 'images/institution.webp' %}" alt="commercial building" width="250px"
                         height="210px"></amp-img>
                     </div>
                 </div>
-                <h3>Commercial Solar</h3>
+                <h3>Commercial</h3>
                 <hr />
                 <p>We provide provide solar for commercial purpose to ensure business continuity.</p>
             </div>
@@ -361,28 +361,71 @@
                         height="210px"></amp-img>
                     </div>
                 </div>
-                <h3>Agriculture Solar</h3>
+                <h3>Agriculture</h3>
                 <hr />
                 <p>We provide power for agricultural purpose including lighting, irrigation, livestock farmimg.</p>
             </div>
             <div class="client-portfolio col-lg-3 col-md-6 col-xs-12">
                 <div class="diamond-image">
                     <div class="pic">
-                        <amp-img src="{% static 'images/institution.webp' %}" alt="School building" width="250px"
+                        <amp-img src="{% static 'images/off-grid.webp' %}" alt="School building" width="250px"
                         height="210px"></amp-img>
                     </div>
                 </div>
-                <h3>Institutions Solar</h3>
+                <h3>Off-Grid</h3>
                 <hr />
-                <p>We consult/design solar energy systems for schools, hospitals and other Institutions.</p>
+                <p>We consult/design complete off-grid solar energy systems for different application.</p>
             </div>
         </div>
 </section>
 <section>
     <div class="container-fluid padding">
+        <div class="service-two col-12">
+            <p class="head">
+                <i class="fas fa-long-arrow-alt-right"></i>Our Statistics</p>
+            <p>Our performance in numbers</p>
+        </div>
+        <div class="row facts padding">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
+                    <div class="inner-box">
+                        <span data-toggle="counter-up">100</span>
+                        <span class="sign">+</span>
+                        <p> Panels
+                            <br /> Installed</p>
+                    </div>
+                </div>  
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
+                    <div class="inner-box">
+                        <span data-toggle="counter-up">80</span>
+                        <span class="sign">+</span>
+                        <p> Kilowatts
+                            <br /> Generated</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
+                    <div class="inner-box">
+                        <span data-toggle="counter-up">102</span>
+                        <span class="sign">+</span>
+                        <p> Tons of Co2 
+                            <br /> Emissions Reduced</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
+                    <div class="inner-box">
+                        <span data-toggle="counter-up">20</span>
+                        <span class="sign">+</span>
+                        <p> Projects
+                            <br /> Completed</p>
+                    </div>
+                </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container-fluid padding">
         <div class="row padding">
             <div class="solar-home-system col-lg-6 col-md-6 col-xs-12">
-                <p>Having a Solar Home System is Good, but Choosing a Solar Installer is Hard!</p>
+                <p>Having a Solar Energy System is Good, but Choosing a Solar Installer is Hard!</p>
                 <a href="{% url 'about' %}">Read More!</a>
             </div>
             <div class="faq col-lg-6 col-md-6 col-xs-12">
@@ -464,11 +507,11 @@
 </section>
 <section class="video-block-style-one text-center">
     <div class="container">
-        <a href="#" class="video-popup" aria-label="play icon button">
+        <a href="https://youtube.com/shorts/DwkZ1JrpcxM" class="video-popup" aria-label="play icon button">
             <i class="fa fa-play"></i>
         </a>
-        <p>We are Building the Future
-            <br> and Restoring the Past</p>
+        <p>We are restoring the Earth 
+            <br>Investing in Carbon Free Energy</p>
     </div>
 </section>
 <section>
@@ -547,9 +590,9 @@
 </section>
 <section>
     <div class="container-fluid padding">
-        <div class="service-two col-12">
-            <p class="head">
-                <i class="fas fa-long-arrow-alt-right"></i>Our Services</p>
+        <div class="service col-12">
+            <p class="head">Our Services</p>
+            <hr />
             <p>Our range of solar installation</p>
         </div>
     </div>
@@ -590,7 +633,7 @@
                             <i class="fas fa-car-battery"></i>
                         </div>
                         <h3>
-                            <a href="{% url 'energy_management' %}">PV Storage</a>
+                            <a href="{% url 'energy_management' %}">Energy Storage</a>
                         </h3>
                         <p>We build energy storage for solar energy systems, which is important for ensuring ...</p>
                         <a href="{% url 'energy_management' %}" class="read-more">Read More</a>
@@ -604,7 +647,7 @@
                             <i class="fas fa-tasks"></i>
                         </div>
                         <h3>
-                            <a href="{% url 'project_management' %}">Solar Development</a>
+                            <a href="{% url 'project_management' %}">Project Management</a>
                         </h3>
                         <p>Your home/business energy usage and GHG emissions can be minimized with the ...</p>
                         <a href="{% url 'project_management' %}" class="read-more">Read More</a>
@@ -618,7 +661,7 @@
                             <i class="fas fa-bolt"></i>
                         </div>
                         <h3>
-                            <a href="{% url 'hvac' %}">Electrical installation</a>
+                            <a href="{% url 'hvac' %}">Electrical projects</a>
                         </h3>
                         <p>You need people you can rely on when it comes to electrical installations ...</p>
                         <a href="{% url 'hvac' %}" class="read-more">Read More</a>
@@ -634,7 +677,7 @@
                         <h3>
                             <a href="{% url 'maintenance_service' %}">Solar Maintenance</a>
                         </h3>
-                        <p>Solar Energy Systems should and must be maintained even though they are fairly...</p>
+                        <p>Solar Energy Systems should and must be maintained even though...</p>
                         <a href="{% url 'maintenance_service' %}" class="read-more">Read More</a>
                     </div>
                 </div>
@@ -645,9 +688,9 @@
 <section>
     <div class="container-fluid padding">
         <div class="hp-project row padding">
-            <div class="service col-12">
-                <p class="head">Featured Projects</p>
-                <hr />
+            <div class="service-two col-12">
+                <p class="head">
+                <i class="fas fa-long-arrow-alt-right"></i>Featured Projects</p>
                 <p>Some of our site installations</p>
             </div>
             <div class="featured-project col-12">
@@ -683,41 +726,5 @@
         </div>
     </div>
 </section>
-<section>
-    <div class="container-fluid padding">
-        <div class="service-two col-12 padding">
-            <p class="head">
-                <i class="fas fa-long-arrow-alt-right"></i>Our Partners</p>
-            <p>Our trusted brands</p>
-        </div>
-        <div class="brand-carousel-wrapper">
-            <div class="brand-carousel-one owl-theme owl-carousel" aria-label="brand partners logo">
-                <div class="item">
-                    <amp-img src="{% static 'images/brand-1-1.webp' %}" alt="sona logo" width = "200"
-                    height = "100" noloading></amp-img>
-                </div>
-                <div class="item">
-                    <amp-img src="{% static 'images/brand-1-2.webp' %}" alt="energy talent logo" width = "200"
-                    height = "100" noloading></amp-img>
-                </div>
-                <div class="item">
-                    <amp-img src="{% static 'images/brand-1-3.webp' %}" alt="schneider logo" width = "200"
-                    height = "100" noloading></amp-img>
-                </div>
-                <div class="item">
-                    <amp-img src="{% static 'images/brand-1-4.webp' %}" alt="amaron logo" width = "200"
-                    height = "100" noloading></amp-img>
-                </div>
-                <div class="item">
-                    <amp-img src="{% static 'images/brand-1-5.webp' %}" alt="felicity logo" width = "200"
-                    height = "100" noloading></amp-img>
-                </div>
-                <div class="item">
-                    <amp-img src="{% static 'images/brand-1-6.webp' %}" alt="abb logo" width = "200"
-                    height = "100" noloading></amp-img>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
 {% endblock %}
