--- a/news/templates/article_list.html
+++ b/news/templates/article_list.html
@@ -7,7 +7,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <p>Greensource News</p>
+            <h1>Greensource News</h1>
         </div>
     </div>
 </div>
